agrego cacheo con redis en modulo agregador